06_K3s/Flux/vikunja/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vikunja-route
  namespace: vikunja
  labels:
    app: vikunja
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: kube-system
  hostnames:
    - "todo.__DNS_ZONE__"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vikunja
          port: 3456
